--- a/src/theme/generics/_generics.page.scss
+++ b/src/theme/generics/_generics.page.scss
@@ -1,7 +1,9 @@
 .page {
+  position: relative;
   width: 100%;
   padding: 100px 0 0 0;
   min-height: 100vh;
+  z-index: -2;
 
   @media screen and (max-width: $em-sizes-md) {
     padding: 100px 0 0 0;
